adding 1st HW6 updates

--- a/index.html
+++ b/index.html
@@ -5,36 +5,50 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+/>
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+  rel="stylesheet"
+/>
+
 
   <href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
   rel="stylesheet"
 />
-  <title>Document</title>
+
+  <title>Handcrafted Hair Bows</title>
 </head>
 <body>
-<header>
-  <h1>This is my main header</h1></header>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Luxe Bows</h1>
+      <div style="width:100%;height:0;padding-bottom:10%;position:relative;"><iframe src="https://giphy.com/embed/LU4yhvZPbccSc" width="100%" height="75%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 
-  <nav>
-    <div class="logo">
+
     </div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Our team</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  </div>
 
-  <nav>
+  <div class="container">
+
+
+  <p>On my site you will see handcrafted bows that your little girl
+    will enjoy wearing. Hair bows are fun accessories that can be worn on ANY occasion! We
+    have a wide variety that range from "Playground Bows" to "I Feel Fancy Today!" I enjoy creating
+    hair bows for my little girl and I hope you enjoy viewing them as much as I do creating them!
+  </p>
+
+
     <i class="fas fa-bars"></i>
   </nav>
 <!-- It contains an article -->
   <main>
-
+This is the main section
   </main>
   <p><button class="button">Contact</button></p>
-  <footer>
-    <p>©Copyright 2021 by Cherisse.</p>
-  </footer>
+
+
 </body>
 </html>
