--- a/index.html
+++ b/index.html
@@ -18,37 +18,10 @@
   <href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
   rel="stylesheet"
 />
-
   <title>Handcrafted Hair Bows</title>
 </head>
 <body>
-  <div class="jumbotron">
-    <div class="container">
-      <h1>Luxe Bows</h1>
-      <div style="width:100%;height:0;padding-bottom:10%;position:relative;"><iframe src="https://giphy.com/embed/LU4yhvZPbccSc" width="100%" height="75%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-
-
-    </div>
-  </div>
-
-  <div class="container">
-
-
-  <p>On my site you will see handcrafted bows that your little girl
-    will enjoy wearing. Hair bows are fun accessories that can be worn on ANY occasion! We
-    have a wide variety that range from "Playground Bows" to "I Feel Fancy Today!" I enjoy creating
-    hair bows for my little girl and I hope you enjoy viewing them as much as I do creating them!
-  </p>
-
-
-    <i class="fas fa-bars"></i>
-  </nav>
-<!-- It contains an article -->
-  <main>
-This is the main section
-  </main>
-  <p><button class="button">Contact</button></p>
-
-
+<div id="root"></div>
+<script>src="index.js"</script>
 </body>
 </html>
