--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <link rel="stylesheet" href="style.css">
   <link
   rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-/>
+  href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-  rel="stylesheet"
-/>
+  rel="stylesheet">
   <href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-  rel="stylesheet"
-/>
+rel="stylesheet">
+
   <title>Handcrafted Hair Bows</title>
 </head>
 <body>
