--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 rel="stylesheet">
 
   <title>CustomizedHandcrafted Hair Bows</title>
-
+  <img src="assets/Images/EllaDrawing.jpg">
 
 </head>
 <body>
+
+
 <div id="root"></div>
 <script src="index.js"></script>
 </body>
