--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ rel="stylesheet">
 
   <title>CustomizedHandcrafted Hair Bows</title>
 
-  <img src="assets/Images/EllaDrawing.jpg">
+ //<img src="assets/img/ellaDrawing.jpg">
 
 </head>
 <body>
